k8s/mongodb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: dss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:7
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: dss
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
