k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dss-ingress
  namespace: dss
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dss-api-service
            port:
              number: 8000
